# Flask-SQLAlchemy-Whoosh

./: .gitignore  LICENSE  README.md  mixin.py  pyproject.toml  requirements.txt  searcher.py  whoosh_searcher.py
.github/workflows/: python-package.yml
src/flask_sqlalchemy_whoosh/: __init__.py  mixin.py  searcher.py
