[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Flask-SQLalchemy-Whoosh"
version = "0.1.3"
authors = [
  { name="Nick" },
]
description = "A flask extension that adds full text search capabilites to your SQLAlchemy models using the Whoosh search engine"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Flask",
]
dependencies = [
    "Flask-SQLAlchemy>=3.0.3",
    "Whoosh>=2.7.4"
]

[project.urls]
"Homepage" = "https://github.com/Momo8289/Flask-SQLAlchemy-Whoosh"
"Bug Tracker" = "https://github.com/Momo8289/Flask-SQLAlchemy-Whoosh/issues"
"Documentation" = "https://github.com/Momo8289/Flask-SQLAlchemy-Whoosh/wiki/Docs"